06-arr/sonarr/03-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr
  namespace: arr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
          name: http
        securityContext:
          privileged: true
        volumeMounts:
        - name: sonarr-data
          mountPath: /config
        - name: sonarr-tv
          mountPath: /tv
        - name: sonarr-downloads
          mountPath: /downloads
      volumes:
      - name: sonarr-data
        persistentVolumeClaim:
          claimName: sonarr-data-pvc
      - name: sonarr-tv
        persistentVolumeClaim:
          claimName: sonarr-tv-pvc
      - name: sonarr-downloads
        persistentVolumeClaim:
          claimName: sonarr-downloads-pvc
