06-arr/sonarr/05-ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: sonarr
  namespace: arr
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.efym.net`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: efym-net-tls
